syntax = "proto3";

package bsync;
option go_package = "./;bsync";

import "google/protobuf/timestamp.proto";

//
// Sync
//


message MuteOperation {
  enum Type {
    TYPE_UNSPECIFIED = 0;
    TYPE_ADD = 1;
    TYPE_REMOVE = 2;
    TYPE_CLEAR = 3;
  }
  string id = 1;
  Type type = 2;
  string actor_did = 3;
  string subject = 4;
}

message AddMuteOperationRequest {
  MuteOperation.Type type = 1;
  string actor_did = 2;
  string subject = 3;
}

message AddMuteOperationResponse {
  MuteOperation operation = 1;
}

message ScanMuteOperationsRequest {
  string cursor = 1;
  int32 limit = 2;
}

message ScanMuteOperationsResponse {
  repeated MuteOperation operations = 1;
  string cursor = 2;
}

message NotifOperation {
  string id = 1;
  string actor_did = 2;
  optional bool priority = 3;
}

message AddNotifOperationRequest {
  string actor_did = 1;
  optional bool priority = 2;
}

message AddNotifOperationResponse {
  NotifOperation operation = 1;
}

message ScanNotifOperationsRequest {
  string cursor = 1;
  int32 limit = 2;
}

message ScanNotifOperationsResponse {
  repeated NotifOperation operations = 1;
  string cursor = 2;
}

message Subscription {
  string status = 1;
  string renewal_status = 2;
  string group = 3;
  string platform = 4;
  string offering = 5;
  google.protobuf.Timestamp period_ends_at = 6;
  google.protobuf.Timestamp period_starts_at = 7;
  google.protobuf.Timestamp purchased_at = 8;
}

message GetSubscriptionsRequest {
  string actor_did = 1;
}

message GetSubscriptionsResponse {
  string email = 1;
  repeated Subscription subscriptions = 2;
}

message SubscriptionOffering {
  string id = 1;
  string product = 2;
}

message GetSubscriptionGroupRequest {
  string group = 1;
  string platform = 2;
}

message GetSubscriptionGroupResponse {
  repeated SubscriptionOffering offerings = 1;
}

message RefreshPurchasesRequest {
  string actor_did = 1;
}

message RefreshPurchasesResponse {}

message PurchaseOperation {
  string id = 1;
  string actor_did = 2;
  repeated string entitlements = 3;
}

message ScanPurchaseOperationsRequest {
  string cursor = 1;
  int32 limit = 2;
}

message ScanPurchaseOperationsResponse {
  repeated PurchaseOperation operations = 1;
  string cursor = 2;
}

// Ping
message PingRequest {}
message PingResponse {}


service Service {
  // Sync
  rpc AddMuteOperation(AddMuteOperationRequest) returns (AddMuteOperationResponse);
  rpc ScanMuteOperations(ScanMuteOperationsRequest) returns (ScanMuteOperationsResponse);
  rpc AddNotifOperation(AddNotifOperationRequest) returns (AddNotifOperationResponse);
  rpc ScanNotifOperations(ScanNotifOperationsRequest) returns (ScanNotifOperationsResponse);
  // Purchase
  rpc GetSubscriptions(GetSubscriptionsRequest) returns (GetSubscriptionsResponse);
  rpc GetSubscriptionGroup(GetSubscriptionGroupRequest) returns (GetSubscriptionGroupResponse);
  rpc RefreshPurchases(RefreshPurchasesRequest) returns (RefreshPurchasesResponse);
  rpc ScanPurchaseOperations(ScanPurchaseOperationsRequest) returns (ScanPurchaseOperationsResponse);
  // Ping
  rpc Ping(PingRequest) returns (PingResponse);
}
